Extracted ConnString to appSettings

--- a/CityInfo.API/appSettings.json
+++ b/CityInfo.API/appSettings.json
@@ -2,5 +2,8 @@
   "mailSettings": {
     "mailToAddress": "developer@mycompany.com",
     "mailFromAddress": "noreply@mycompany.com"
+  },
+  "connectionStrings": {
+    "cityInfoConnectionString": "\"Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=CityInfo;Data Source=DEV-MACHINE8\";"
   }
 }
