Added Repo pattern

--- a/CityInfo.API/appSettings.json
+++ b/CityInfo.API/appSettings.json
@@ -4,6 +4,6 @@
     "mailFromAddress": "noreply@mycompany.com"
   },
   "connectionStrings": {
-    "cityInfoConnectionString": "\"Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=CityInfo;Data Source=DEV-MACHINE8\";"
+    "cityInfoConnectionString": "\"Persist Security Info=False;Initial Catalog=CityInfo;Data Source=DEV-MACHINE8\";"
   }
 }
